fixing log text alignment on local

--- a/src/pages/update-docker-apps-page/update-docker-apps-page.component.scss
+++ b/src/pages/update-docker-apps-page/update-docker-apps-page.component.scss
@@ -19,5 +19,6 @@
         border-top: 0;
         outline: none;
         resize: none;
+        text-align:left !important;
     }
 }
